--- a/mysite/polls/templates/login.html
+++ b/mysite/polls/templates/login.html
@@ -61,7 +61,7 @@ body {display:table;}
 		</form>
         </div>
         <div class="footerdiv">
-        	<a href="/home/forgot/">Fogot your Password?</a>
+        	<a href="/home/forgot/">Forgot your Password?</a>
         </div>
 		
     </section>
