--- a/mysite/polls/templates/adduser.html
+++ b/mysite/polls/templates/adduser.html
@@ -10,7 +10,9 @@
     $(document).ready(function () {
         $('#cpform').bValidator(options6);
     });
+	
 </script>
+
 </head>
 
 <body>
@@ -30,33 +32,43 @@
             	<label style="color:#FF0000">{{msg}}</label>
             
 			<span style="color:red" id="error"></span>
-			<div class="loginhgtdiv">
+			<div class="set_one">Personal Details :</div>
+			<div class="loginhgtdiv loginhgtdiv_new">
             	<label for="first_name">{% trans "first_name" %}</label>
                 <input type="text"  name="first_name" id="first_name" data-bvalidator="required" value="" data-bvalidator-msg="Please enter First Name" />
             </div>
-			<div class="loginhgtdiv">
+			<div class="loginhgtdiv loginhgtdiv_new">
             	<label for="last_name">{% trans "last_name" %}</label>
                 <input type="text"  name="last_name" id="last_name" data-bvalidator="required" value="" data-bvalidator-msg="Please enter Last Name"/>
             </div>
-			<div class="loginhgtdiv">
-            	<label for="username">{% trans "uname" %}</label>
-                <input type="text"  name="username" id="username" data-bvalidator="required" onblur="return chkuser();" data-bvalidator-msg="Please enter Username" value="" />
+			<div class="set_one_second">Professional Details :</div>
+			<div class="loginhgtdiv loginhgtdiv_new">
+            	<label for="report_to">{% trans "report_to" %}</label>
+                <input type="text"  name="report_to" id="report_to" data-bvalidator="required" data-bvalidator-msg="Please enter Report To" onkeyup="lookup(this.value);" onblur="fill();" />
+				<div class="suggestionsBox" id="suggestions" style="display: none;">
+				<img src="{{STATIC_URL}}polls/images/upArrow.png" style="position: relative; top: -9px; left: 30px;" alt="upArrow" />
+				<div class="suggestionList" id="autoSuggestionsList">
+					&nbsp;
+				</div>
+			</div>
             </div>
-			<div class="loginhgtdiv">
-            	<label for="email">{% trans "email" %}</label>
-                <input type="text"  name="email" id="email" data-bvalidator="email,required" value=""  data-bvalidator-msg="Please enter Valid Email" onblur="checkemail();"/>
-            </div>
-			<div class="loginhgtdiv">
+			<div class="loginhgtdiv loginhgtdiv_new">
             	<label for="role">{% trans "role" %}</label>
                 <input type="text"  name="role" id="role" data-bvalidator="required" data-bvalidator-msg="Please enter Role" value="" />
             </div>
-			<div class="loginhgtdiv">
-            	<label for="report_to">{% trans "report_to" %}</label>
-                <input type="text"  name="report_to" id="report_to" data-bvalidator="required" data-bvalidator-msg="Please enter Report To" value="" />
-				<div id="display"></div>
+			<div class="set_one_second">Authentication Details :</div>
+			<div class="loginhgtdiv loginhgtdiv_new">
+            	<label for="username">{% trans "uname" %}</label>
+                <input type="text"  name="username" id="username" data-bvalidator="required" onblur="return chkuser();" data-bvalidator-msg="Please enter Username" value="" />
             </div>
-            <div class="loginhgtdiv">
-            	<input type="button" value="Submit" name="submit" id="submit" onclick="return insertuser();" class="page_btn" />
+			<div class="loginhgtdiv loginhgtdiv_new">
+            	<label for="email">{% trans "email" %}</label>
+                <input type="text"  name="email" id="email" data-bvalidator="email,required" value=""  data-bvalidator-msg="Please enter Valid Email" onblur="return checkemail();"/>
+            </div>
+			
+			
+            <div class="loginhgtdiv loginhgtdiv_new">
+            	<input type="button" value="Submit" name="submit" id="submit" onclick="return checkemail,insertuser();" class="page_btn" />
 				<div id="load" style="display:none;"><img src='{{STATIC_URL}}polls/images/ajax-load-black.gif'/></div>
                 <div class="clear"></div>
             </div>
@@ -68,17 +80,23 @@
     <!--admin login panel div end here-->
 
 </div>
+<script type="text/javascript" src="{{STATIC_URL}}polls/jquery-1.2.1.pack.js"></script>
 <script type="text/javascript"> 
-$(document).ready(function(){
-	$("#report_to").keyup(function() 
+
+	function fill(thisValue) {
+		$('#report_to').val(thisValue);
+		setTimeout("$('#suggestions').hide();", 200);
+	}
+	function lookup(str)
 	{
-		var searchbox = $(this).val();
+		var searchbox = str;
 		$.ajax({
 			url:"/home/autouser/",
 			type: "POST",
 			data: {term: searchbox,csrfmiddlewaretoken: '{{ csrf_token }}'},
 			success:function(response){
-			$("#display").html(response).show();
+			$('#suggestions').show();
+			$('#autoSuggestionsList').html(response);
 
 			},
 			complete:function(){},
@@ -86,8 +104,7 @@ $(document).ready(function(){
 
 			}
 		});
-	});
-});
+	}
 	function checkname()
 	{
 		var name;
@@ -97,7 +114,7 @@ $(document).ready(function(){
 			$('#error').html('Please enter First Name!');
 			 //setTimeout(function() {
 				$("#first_name").focus();
-			$('#error').delay(3200).fadeOut(300);
+			$('#error').fadeOut(3500);
 			//}, 0);
 			return false;
 		}
@@ -115,7 +132,7 @@ $(document).ready(function(){
 		{
 			$('#error').html('Please enter Last Name!');
 			 $("#last_name").focus();
-			$('#error').delay(3200).fadeOut(300);
+			$('#error').fadeOut(3500);
 			return false;
 		}
 		else{
@@ -125,18 +142,22 @@ $(document).ready(function(){
 	}
 	function chkuser()
 	{
-		
+			var username=$("#username").val();
 			$.ajax({
 			url:"/register/chk_user/",
 			type: "POST",
 			data: {username: username,csrfmiddlewaretoken: '{{ csrf_token }}'},
 			success:function(response){
 				if(response == "no")
+				{
+					
 					return true;
+				}
 				else
 					$('#error').html('Username Already Exist!');
 					$('#username').focus();
-					$('#error').delay(3200).fadeOut(300);
+					$('#error').fadeOut(3500);
+					
 					return false;
 			},
 			complete:function(){},
@@ -150,18 +171,22 @@ $(document).ready(function(){
 	}
 	function checkemail()
 	{
-		
+			var email=$("#email").val();
 			$.ajax({
 				url:"/register/chk_email/",
 				type: "POST",
 				data: {email: email,csrfmiddlewaretoken: '{{ csrf_token }}'},
 				success:function(response){
 					if(response == "no")
+					{
+						
 						return true;
+					}
 					else
 						$('#error').html('Email Already Exist!');
 						$('#email').focus();
-						$('#error').delay(3200).fadeOut(300);
+						$('#error').fadeOut(3500);
+						
 						return false;
 				},
 				complete:function(){},
@@ -180,7 +205,7 @@ $(document).ready(function(){
 		{
 			$('#error').html('Please enter Role of user!');
 			$('#role').focus();
-			$('#error').delay(3200).fadeOut(300);
+			$('#error').fadeOut(3500);
 			return false;
 		}
 		
@@ -197,7 +222,7 @@ $(document).ready(function(){
 		{
 			$('#error').html('Please enter Report TO!');
 			$('#report_to').focus();
-			$('#error').delay(3200).fadeOut(300);
+			$('#error').fadeOut(3500);
 			return false;
 		}
 		
@@ -214,7 +239,7 @@ $(document).ready(function(){
 		{
 			$('#error').html('Please enter First Name!');
 			$("#first_name").focus();
-			$('#error').delay(3200).fadeOut(300);
+			$('#error').fadeOut(3500);
 			return false;
 		}
 		var name;
@@ -223,7 +248,7 @@ $(document).ready(function(){
 		{
 			$('#error').html('Please enter Last Name!');
 			$("#last_name").focus();
-			$('#error').delay(3200).fadeOut(300);
+			$('#error').fadeOut(3500);
 			return false;
 		}
 		var username
@@ -232,7 +257,7 @@ $(document).ready(function(){
 		{
 			$('#error').html('Please enter Username!');
 			$('#username').focus();
-			$('#error').delay(3200).fadeOut(300);
+			$('#error').fadeOut(3500);
 			return false;
 		}
 		var email;
@@ -242,7 +267,7 @@ $(document).ready(function(){
 		{
 			$('#error').html('Please enter Valid Email Address!');
 			$('#email').focus();
-			$('#error').delay(3200).fadeOut(300);
+			$('#error').fadeOut(3500);
 			return false;
 		}
 		var role;
@@ -251,7 +276,7 @@ $(document).ready(function(){
 		{
 			$('#error').html('Please enter Role of user!');
 			$('#role').focus();
-			$('#error').delay(3200).fadeOut(300);
+			$('#error').fadeOut(3500);
 			return false;
 		}
 		var report;
@@ -260,36 +285,59 @@ $(document).ready(function(){
 		{
 			$('#error').html('Please enter Report TO!');
 			$('#report_to').focus();
-			$('#error').delay(3200).fadeOut(300);
+			$('#error').fadeOut(3500);
+
 			return false;
+			
 		}
 		
-		
-		var first_name = $("#first_name").val();
-		var last_name = $("#last_name").val();
-		var username = $("#username").val();
-		var email = $("#email").val();
-		var role = $("#role").val();
-		var report_to = $("#report_to").val();
-		$("#load").show();
-		$("#submit").attr("disabled", true);
 		$.ajax({
-			url:"/home/insertuser/",
-			type: "POST",
-			data: {first_name: first_name,last_name:last_name,username:username,email:email,role:role,report_to:report_to,csrfmiddlewaretoken: '{{ csrf_token }}'},
-			success:function(response){
-				$('#aboutright').hide();
-				$(".topfityone").css('width','100%');
-				$("#load").hide();
+				url:"/register/chk_email/",
+				type: "POST",
+				data: {email: email,csrfmiddlewaretoken: '{{ csrf_token }}'},
+				success:function(response){
+					if(response == "no")
+					{
+						
+						var first_name = $("#first_name").val();
+						var last_name = $("#last_name").val();
+						var username = $("#username").val();
+						var email = $("#email").val();
+						var role = $("#role").val();
+						var report_to = $("#report_to").val();
+						$("#load").show();
+						$("#submit").attr("disabled", true);
+						$.ajax({
+							url:"/home/insertuser/",
+							type: "POST",
+							data: {first_name: first_name,last_name:last_name,username:username,email:email,role:role,report_to:report_to,csrfmiddlewaretoken: '{{ csrf_token }}'},
+							success:function(response){
+								$('#aboutright').hide();
+								$(".topfityone").css('width','100%');
+								$("#load").hide();
+								showprimaryorg();
+								return true;
+							},
+							complete:function(){},
+							error:function (xhr, textStatus, thrownError){
+							
+							}
+						});
+					}
+					else
+					{
+						$('#error').html('Email Already Exist!');
+						$('#email').focus();
+						$('#error').fadeOut(3500);
+					}	
+						return false;
+				},
+				complete:function(){},
+				error:function (xhr, textStatus, thrownError){
 				
-				$("#primary-org a").trigger('click');
-				return true;
-			},
-			complete:function(){},
-			error:function (xhr, textStatus, thrownError){
-			
-			}
-		});
+				}
+			});
+		
 	}
 	
 		
